fixes overflow issue possibly

--- a/src/layouts/stabhigh.css
+++ b/src/layouts/stabhigh.css
@@ -466,7 +466,7 @@
 
   .random-monster__3 {
     bottom: -200px;
-    right: -50px;
+    right: 100px;
   }
 
   .random-monster__3 img {
